Fixed tooltip flickering

--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -165,6 +165,7 @@ section .title-bg {
     padding: 10px;
     border-radius: 10px;
     box-shadow: 10px 10px 8px #888888;
+    pointer-events: none;
 }
 
 [tooltip]:hover:before {        
